--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,12 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# Yarn 2
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
