--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,13 +25,14 @@
 			"source.eslint.fixAll": true
 		},
 
+		"editor.tabSize": 2,
+
 		// Remember to install the font in your host machine
 		"terminal.integrated.fontFamily": "MesloLGS NF"
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"arcanis.vscode-zipfs",
 		"dbaeumer.vscode-eslint",
 		"wix.vscode-import-cost",
 		"streetsidesoftware.code-spell-checker",
@@ -39,7 +40,8 @@
 		"ms-azuretools.vscode-docker",
 		"bierner.markdown-preview-github-styles",
 		"yzhang.markdown-all-in-one",
-		"ms-azuretools.vscode-azurefunctions"
+		"ms-azuretools.vscode-azurefunctions",
+		"meganrogge.template-string-converter"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
