--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "azure-jamstack-nextjs",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,10 +15,7 @@
     "react-query": "^3.18.1"
   },
   "devDependencies": {
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.2"
+    "@types/react": "^17.0.13",
+    "typescript": "^4.3.5"
   }
 }
