--- a/src/functions/tsconfig.json
+++ b/src/functions/tsconfig.json
@@ -10,6 +10,5 @@
     "strict": false,
     "preserveWatchOutput": true
   },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["**/*.ts"]
 }
