--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "noImplicitAny": true
-  }
+    "noImplicitAny": true,
+    "strict": true
+  },
+  "exclude": ["node_modules"]
 }
