Resetting devcontainer options for overrides

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,5 +46,5 @@
   // "forwardPorts": [],
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "yarn install"
+  "postCreateCommand": "yarn install; cp -fv ~/overrides/* ~/ || true; cp -fv ~/overrides/.* ~/ || true"
 }
