--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3'
+version: "3"
 
 services:
   app:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
       args:
@@ -17,8 +17,8 @@ services:
     volumes:
       - ..:/workspace:cached
       - ./.zshrc:/home/node/.zshrc:cached
-      - ./.home-overrides/.p10k.zsh:/home/node/.p10k.zsh:cached
-    
+      - ./.home-overrides:/home/node/overrides:cached
+
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
 
