--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -18,9 +18,15 @@ services:
       - ..:/workspace:cached
       - ./.zshrc:/home/node/.zshrc:cached
       - ./.home-overrides:/home/node/overrides:cached
+      - node-modules-cache:/workspace/node_modules
+      - node-modules-ci-cache:/workspace/ci/node_modules
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
 
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
     # network_mode: service:db
+
+volumes:
+  node-modules-cache:
+  node-modules-ci-cache:
