--- a/ci/Pulumi.dev.yaml
+++ b/ci/Pulumi.dev.yaml
@@ -1,3 +1,3 @@
 encryptionsalt: v1:iVzCcDmbMdk=:v1:KHCauPG57+qkbgiy:eTBIv+rwrmixxCCAJn+71+hHd/PfVg==
 config:
-  azure-native:location: westus
+  azure-native:location: eastus
