--- a/ci/package.json
+++ b/ci/package.json
@@ -2,14 +2,16 @@
   "name": "ci",
   "version": "0.1.0",
   "private": true,
+  "main": "bin",
+  "type": "module",
   "devDependencies": {
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^10.0.0"
   },
   "dependencies": {
+    "@pulumi/azure-native": "^1.0.0",
     "@pulumi/pulumi": "^3.0.0",
-    "@pulumi/azure-native": "^1.0.0"
-  },
-  "workspaces": {
-    "nohoist": ["@pulumi/**"]
+    "mime-types": "^2.1.31",
+    "typescript": "^4.3.5"
   }
 }
