--- a/src/client/package.json
+++ b/src/client/package.json
@@ -15,6 +15,7 @@
     "react-query": "^3.18.1"
   },
   "devDependencies": {
+    "@types/node": "^16.0.1",
     "@types/react": "^17.0.13",
     "typescript": "^4.3.5"
   }
