--- a/src/client/package.json
+++ b/src/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "debug": "NODE_OPTIONS='--inspect=9229' next dev"
   },
   "dependencies": {
     "next": "11.0.1",
